SCRUM-106: Receive plan schedules propositions from solver and save them to database on backend